# coursework_7

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habits/: apps.py  auth.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
