[tool.poetry]
name = "habits tracker"
version = "0.1.0"
description = ""
authors = ["BroneKot"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.0.8"
python-telegram-bot = "^21.6"
django-cors-headers = "^4.4.0"
drf-spectacular = "^0.27.2"
djangorestframework-simplejwt = "^5.3.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
